firefox is badd. maybe metric-graphics is good?

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": [ "latest", "react"],
+  "presets": [ "latest", "stage-0"],
   "plugins": [
     "transform-runtime",
     "add-module-exports",
