--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "ia-bday",
   "version": "0.0.1",
   "dependencies": {
+    "jquery": "^3.1.1",
     "bluebird": "^3.4.6",
-    "d3": "^3.5.17",
+    "d3": "^4.2.8",
     "fs-extra": "^0.30.0",
+    "metrics-graphics": "^2.10.1",
     "moment": "^2.15.2",
     "nvd3": "^1.8.4"
   },
   "scripts": {
-    "dev-ui": "node -r babel-register ./node_modules/.bin/webpack-dev-server --port 9000 --content-base src --hot --inline"
-
+    "dev-ui": "node -r babel-register ./node_modules/.bin/webpack-dev-server --port 9000 --content-base . --hot --inline"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -18,37 +19,28 @@
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-react-html-attrs": "2.0.0",
-    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-syntax-function-sent": "^6.13.0",
     "babel-plugin-transform-async-to-module-method": "^6.16.0",
     "babel-plugin-transform-class-properties": "6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-destructuring": "^6.18.0",
     "babel-plugin-transform-function-bind": "^6.8.0",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
-    "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.10",
     "babel-plugin-transform-remove-console": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-plugin-webpack-loaders": "^0.8.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-node6": "^11.0.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
     "babel-runtime": "6.18.0",
     "babelify": "^7.3.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-cli": "^1.2.2",
-    "gulp-nodemon": "^2.2.1",
+    "css-loader": "^0.25.0",
+    "json-loader": "^0.5.4",
     "file-loader": "^0.9.0",
     "strip-loader": "^0.1.2",
     "style-loader": "0.13.1",
+    "raw-loader": "^0.5.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.4",
